--- a/innovacion.html
+++ b/innovacion.html
@@ -108,7 +108,7 @@
 
   <script>
     const boardSize = 10; // Tamaño del tablero (10x10)
-    const words = ["DIGITAL", "REVOLUCION", "CELULAR", "ELECTRONICA", "COMUNICACION", "ARTIFICIAL", "INTERNET", "COMPUTADOR", "ROBOT", "REDES", "DISPOSITIVOS", "MICROPROCESADOR", "INDUSTRIA"];
+    const words = ["CARRO", "MOTO", "CELULAR", "RELOJ", "COBRE", "FUEGO", "LUZ", "ESPEJO", "ZAPATO", "ARENA", "SOL", "CAJAS", "HIERRO", "PESCADO", "MADERA"];
     const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
     let board = [];
     let selectedLetters = [];
