--- a/innovacion.html
+++ b/innovacion.html
@@ -108,12 +108,12 @@
 
   <script>
     const boardSize = 10; // Tamaño del tablero (10x10)
-    const words = ["CARRO", "MOTO", "CELULAR", "RELOJ", "COBRE", "FUEGO", "LUZ", "ESPEJO", "ZAPATO", "ARENA", "SOL", "CAJAS", "HIERRO", "PESCADO", "MADERA"];
+    const words = ["CARRO", "MOTOCICLETA", "CELULAR", "RELOJ", "COBRE", "FUEGO", "ESPEJO", "ZAPATO", "ARENA", "CAJAS", "HIERRO", "PESCADO", "MADERA"];
     const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
     let board = [];
     let selectedLetters = [];
     let score = 0;
-    let timeLeft = 80;
+    let timeLeft = 60;
     let targetWord = ""; // La palabra objetivo
 
     // Seleccionar una palabra al azar
