--- a/innovacion.html
+++ b/innovacion.html
@@ -108,7 +108,7 @@
 
   <script>
     const boardSize = 10; // Tamaño del tablero (10x10)
-    const words = ["CARRO", "MOTOCICLETA", "CELULAR", "RELOJ", "COBRE", "FUEGO", "ESPEJO", "ZAPATO", "ARENA", "CAJAS", "HIERRO", "PESCADO", "MADERA"];
+    const words = ["COMUNICACION", "PAQUETE", "FIREWALL", "COMPUTADOR", "ROUTERS", "MODEMS", "INFORMACION", "INTERNET", "TECNOLOGIA", "SMARTPHONE"];
     const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
     let board = [];
     let selectedLetters = [];
