--- a/innovacion.html
+++ b/innovacion.html
@@ -107,8 +107,8 @@
   </div>
 
   <script>
-    const boardSize = 10; // Tamaño del tablero (10x10)
-    const words = ["COMUNICACION", "PAQUETE", "FIREWALL", "COMPUTADOR", "ROUTERS", "MODEMS", "INFORMACION", "INTERNET", "TECNOLOGIA", "SMARTPHONE"];
+    const boardSize = 15; // Tamaño del tablero (10x10)
+    const words = ["COMUNICACION", "PETROLEO", "SIDERURGIA", "ELECTRICIDAD", "MOTORES", "FINANZAS", "INDUSTRIA", "TEXTIL", "CAPITALISMO", "EXPLOSION"];
     const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
     let board = [];
     let selectedLetters = [];
